; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ar7/files/drivers/mtd/extr_ac49xpart.c_parse_partvar.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ar7/files/drivers/mtd/extr_ac49xpart.c_parse_partvar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_partition = type { i32, i32 }

@.str = private unnamed_addr constant [10 x i8] c"0x%x,0x%x\00", align 1
@AC49X_FLASH_ADDRMASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_partvar(i8* %0, %struct.mtd_partition* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mtd_partition*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.mtd_partition* %1, %struct.mtd_partition** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @sscanf(i8* %9, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32* %6, i32* %7)
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp ne i32 %11, 2
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %25

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @AC49X_FLASH_ADDRMASK, align 4
  %17 = and i32 %15, %16
  %18 = load %struct.mtd_partition*, %struct.mtd_partition** %5, align 8
  %19 = getelementptr inbounds %struct.mtd_partition, %struct.mtd_partition* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %6, align 4
  %22 = sub i32 %20, %21
  %23 = load %struct.mtd_partition*, %struct.mtd_partition** %5, align 8
  %24 = getelementptr inbounds %struct.mtd_partition, %struct.mtd_partition* %23, i32 0, i32 1
  store i32 %22, i32* %24, align 4
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %14, %13
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @sscanf(i8*, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
